# Slot_machine

./: .gitignore  CMakeLists.txt  README.md  README_RU.md  setup.bat  setup.sh  vcpkg.json
include/: GameConstants.h  Reel.h  ReelSet.h  SlotMachine.h  State.h  StateFactory.h  StateMachine.h  States.h  Symbol.h  UI.h
src/: GameTypes.h  Reel.cpp  ReelSet.cpp  SlotMachine.cpp  State.cpp  StateFactory.cpp  StateMachine.cpp  States.cpp  Symbol.cpp  UI.cpp  main.cpp
